--- a/main.html
+++ b/main.html
@@ -9,29 +9,28 @@
  <body>
    <nav> 
     <a href ="1.html" class = "home">HOME</a> 
-    <a href = "whoiam.html">Who I am</a>
-    <a href = "whatido.html">What I do</a>
+    <a href = "whoiam.html">WHO I AM</a>
+    <a href = "whatido.html">WHAT I DO</a>
    </nav>
+   
+   <header>
+    <h1> Hi, this is Yujia Cao. </h1>
+   </header>
   
-  <header>
-   <h1> Hi, this is Yujia Cao. </h1>
-  </header>
+    <div class= "maintext">
+     <p> Right now I am in my 2A term studying Computer Science <br> in University of Waterloo.</p>
+     <p>I am a programmer, a web designer and an artist.</p>
   
-   <div class= "maintext">
-   <p> Right now I am in my 2A term studying Computer Science <br> in University of Waterloo.</p>
-   <p>I am a programmer, a web designer and an artist.</p>
+     <section class = "contact">
+      <a href = "mailto:y77cao@uwaterloo.ca" > <img src = "sources/email.jpg" alt = "email" > </a>
+      <a href = "https://www.facebook.com/cao.yujia.7"  > <img src = "sources/fb.jpg" alt = "facebook" > </a>
+      <a href = "https://github.com/y77cao"  > <img src = "sources/github.jpg" alt = "github" > </a>
+     </section>
+    </div>
   
-   <section class = "contact">
-     <a href = "mailto:y77cao@uwaterloo.ca" class = "btn"> <img src = "sources/email.jpg" ></a>
-     <a href = "https://www.facebook.com/cao.yujia.7" class = "btn"> <img src = "fb.jpg"> </a>
-     <a href = "https://github.com/y77cao" class = "btn"> <img src = "github.ipg"> </a>
-   </section>
-  </div>
-  
-  <footer>
-   <small>2016 &copy;YUJIA CAO</small>
+  <footer class = "footer">
+   <p>2016 &copy;YUJIA CAO</p>
   </footer>
-  
   
  </body>
  
